# games

./: ASSETS_GUIDE.md  BUILDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_PROJECT_SUMMARY.md  FULL_STORY_GAME_README.md  GITHUB_ACTIONS_FIXED.md  GITHUB_BUILD_README.md  GITHUB_SETUP_COMPLETE.md  LICENSE  MINGW_REMOVAL_FIX_README.md  README.md  RELEASE_NOTES.md  SFML_DIRECT_FIX_README.md  SFML_FIX_README.md  SFML_NUGET_FIX_README.md  SPRITES_AND_ASSETS.md  STORY_COMPLETE.md  TODO.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
cpp_game/: CMakeLists.txt  FULL_GAME_README.md  ULTIMATE_README.md
cpp_game/include/: Animation.h  AudioManager.h  Cutscene.h  EffectManager.h  Game.h  Level.h  Menu.h  SaveSystem.h  SpriteGenerator.h  StoryManager.h  StoryMode.h
cpp_game/src/: Animation.cpp  AudioManager.cpp  Cutscene.cpp  EffectManager.cpp  Game.cpp  Level.cpp  Menu.cpp  SaveSystem.cpp  SpriteGenerator.cpp  StoryManager.cpp  StoryMode.cpp  main.cpp
js/: game.js
